# oslo.limit

./: .converagerc  .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/install/: index.rst  installation.rst
doc/source/reference/: index.rst  opts.rst
doc/source/user/: index.rst  testing.rst  usage.rst
oslo_limit/: _i18n.py  exception.py  fixture.py  limit.py  opts.py
oslo_limit/tests/: test_fixture.py  test_limit.py
releasenotes/notes/: ability-to-select-interface-for-obtaining-limits-bae308e3d2f515f0.yaml  bug-1962406-e239d60400c726c8.yaml  bug-2123895-d46347955768fab1.yaml  bug-2157958-unlimited-limit-enforcement.yaml  enforcer-limit-caching-fb59725aad88b039.yaml  fix-ignored-ksa-adapter-options-e120fac9a6fd35f7.yaml  look-up-endpoint-id-from-keystone-9d8419673902c258.yaml  pre-stable-version-warning-83dbfc9427a22725.yaml
releasenotes/source/: conf.py  index.rst
