[metadata]
name = oslo.limit
summary = Limit enforcement library to assist with quota calculation.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/oslo.limit/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    oslo_limit

[entry_points]
oslo.config.opts =
    oslo.limit = oslo_limit.opts:list_opts

[compile_catalog]
directory = oslo_limit/locale
domain = oslo_limit

[update_catalog]
domain = oslo_limit
output_dir = oslo_limit/locale
input_file = oslo_limit/locale/oslo_limit.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_limit/locale/oslo_limit.pot

[wheel]
universal = true